--- a/NuiOS/Base.lproj/SignUp.storyboard
+++ b/NuiOS/Base.lproj/SignUp.storyboard
@@ -1,7 +1,98 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="hlz-q0-VBe">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--Sign Up Nav Controller-->
+        <scene sceneID="7px-Ip-nkt">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xld-ob-2wh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <navigationController id="8Sv-Ao-psr" customClass="SignUpNavController" customModule="NuiOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="DZi-n8-xDY">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+            </objects>
+            <point key="canvasLocation" x="276" y="224"/>
+        </scene>
+        <!--Sign Up Pre StepVC-->
+        <scene sceneID="EbO-sa-i5r">
+            <objects>
+                <viewController id="hlz-q0-VBe" customClass="SignUpPreStepVC" customModule="NuiOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="a5C-rq-84Q">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Twv-kT-6r6">
+                                <rect key="frame" x="21" y="283.5" width="333" height="120"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to NuiOS SignUp tap  continue to start your signup." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" minimumFontSize="13" translatesAutoresizingMaskIntoConstraints="NO" id="ADT-Aq-hY7">
+                                        <rect key="frame" x="0.0" y="0.0" width="333" height="60"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zcv-Gc-rIO" customClass="NuButton" customModule="NuiOS" customModuleProvider="target">
+                                        <rect key="frame" x="108" y="80" width="117" height="40"/>
+                                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="Kjv-32-xQX"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
+                                        <inset key="contentEdgeInsets" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                                        <state key="normal" title="Continue"/>
+                                        <state key="disabled">
+                                            <color key="titleColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="5"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                            <navigationBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pNT-bj-4Bf" customClass="NuNavigationBar" customModule="NuiOS" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <items>
+                                    <navigationItem id="Yer-d5-omm">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="RFM-Kb-arf">
+                                            <connections>
+                                                <action selector="closeBtnAction:" destination="hlz-q0-VBe" id="EPk-UT-YWg"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="invisible" value="YES"/>
+                                </userDefinedRuntimeAttributes>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="Twv-kT-6r6" firstAttribute="leading" secondItem="a5C-rq-84Q" secondAttribute="leadingMargin" constant="5" id="7Io-Pq-p2B"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Twv-kT-6r6" secondAttribute="trailing" constant="5" id="kHj-oW-O56"/>
+                            <constraint firstItem="Twv-kT-6r6" firstAttribute="centerY" secondItem="ZUZ-mS-Ve0" secondAttribute="centerY" id="okF-4Y-1Vg"/>
+                            <constraint firstItem="pNT-bj-4Bf" firstAttribute="top" secondItem="ZUZ-mS-Ve0" secondAttribute="top" id="ulN-dy-FMa"/>
+                            <constraint firstItem="pNT-bj-4Bf" firstAttribute="leading" secondItem="ZUZ-mS-Ve0" secondAttribute="leading" id="wvl-0J-BcY"/>
+                            <constraint firstAttribute="trailing" secondItem="pNT-bj-4Bf" secondAttribute="trailing" id="xRH-iC-869"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="ZUZ-mS-Ve0"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VQq-ib-zM7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-489" y="225"/>
+        </scene>
+    </scenes>
 </document>
