--- a/NuiOS/Base.lproj/Login.storyboard
+++ b/NuiOS/Base.lproj/Login.storyboard
@@ -23,7 +23,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="LZa-Yq-e58"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <inset key="contentEdgeInsets" minX="30" minY="0.0" maxX="30" maxY="0.0"/>
                                 <state key="normal" title="Sign up"/>
                                 <connections>
@@ -33,14 +33,17 @@
                             <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lQt-pU-MOq">
                                 <rect key="frame" x="37.5" y="236" width="300" height="235"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ilC-RI-y8h" customClass="NuButton" customModule="NuiOS" customModuleProvider="target">
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ilC-RI-y8h" customClass="NuButton" customModule="NuiOS" customModuleProvider="target">
                                         <rect key="frame" x="5" y="180" width="290" height="45"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="sQU-SU-qhg"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
+                                        <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                         <state key="normal" title="Login"/>
+                                        <connections>
+                                            <action selector="loginBtnAction:" destination="i6o-GW-h1X" eventType="touchUpInside" id="A1v-lc-UVd"/>
+                                        </connections>
                                     </button>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="0SJ-1z-ryY">
                                         <rect key="frame" x="5" y="40" width="290" height="100"/>
@@ -63,13 +66,16 @@
                                                         <real key="value" value="0.80000000000000004"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <outlet property="delegate" destination="i6o-GW-h1X" id="XTr-eO-VoF"/>
+                                                </connections>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c3m-xI-MwL" customClass="LinedTTextField" customModule="NuiOS" customModuleProvider="target">
+                                            <textField opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c3m-xI-MwL" customClass="LinedTTextField" customModule="NuiOS" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="60" width="290" height="40"/>
                                                 <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                <textInputTraits key="textInputTraits" returnKeyType="go" textContentType="password"/>
+                                                <textInputTraits key="textInputTraits" returnKeyType="done" textContentType="password"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="editingTitleColor">
                                                         <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -82,6 +88,9 @@
                                                         <real key="value" value="0.80000000000000004"/>
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <outlet property="delegate" destination="i6o-GW-h1X" id="fqu-bR-Uua"/>
+                                                </connections>
                                             </textField>
                                         </subviews>
                                         <constraints>
@@ -108,7 +117,7 @@
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Do not have an account ?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rE-zV-Ocb">
                                 <rect key="frame" x="91" y="586.5" width="193.5" height="20.5"/>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="DOJ-u9-fil">
@@ -123,7 +132,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="qzA-ku-hrO"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <inset key="contentEdgeInsets" minX="30" minY="0.0" maxX="30" maxY="0.0"/>
                                 <state key="normal" title="Forgot Password ?"/>
                             </button>
@@ -146,7 +155,10 @@
                     <connections>
                         <outlet property="credentialsView" destination="lQt-pU-MOq" id="gaz-gO-83l"/>
                         <outlet property="dist" destination="hQ8-un-ZWy" id="pef-98-CEZ"/>
+                        <outlet property="loginButton" destination="ilC-RI-y8h" id="wrR-sf-Bam"/>
                         <outlet property="logoImageView" destination="DOJ-u9-fil" id="SPy-gE-ON3"/>
+                        <outlet property="passwordTF" destination="c3m-xI-MwL" id="E9I-G7-Sux"/>
+                        <outlet property="usernameTF" destination="h0w-7F-4jO" id="t5E-lh-wjX"/>
                         <segue destination="VnT-se-Jdm" kind="presentation" identifier="enter" id="bZa-95-H2f"/>
                     </connections>
                 </viewController>
@@ -160,7 +172,7 @@
                 <viewControllerPlaceholder storyboardName="Main" id="VnT-se-Jdm" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Mm4-E7-Rm8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="604" y="18"/>
+            <point key="canvasLocation" x="590" y="85"/>
         </scene>
         <!--SignUp-->
         <scene sceneID="8fu-le-bW0">
@@ -168,7 +180,7 @@
                 <viewControllerPlaceholder storyboardName="SignUp" id="QMj-6i-ZuO" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xDT-ai-v3l" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="603" y="147"/>
+            <point key="canvasLocation" x="602" y="131"/>
         </scene>
     </scenes>
 </document>
