Adding methods of some endpoints, fixing some view interactions

--- a/NuiOS/Base.lproj/AccountRecover.storyboard
+++ b/NuiOS/Base.lproj/AccountRecover.storyboard
@@ -151,10 +151,10 @@
             </objects>
             <point key="canvasLocation" x="661.60000000000002" y="1437.9310344827588"/>
         </scene>
-        <!--Sign Up Phone NumberSVC-->
+        <!--Account Rec Phone NumberSVC-->
         <scene sceneID="XH4-ug-k4l">
             <objects>
-                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="NYk-fN-lKM" customClass="SignUpPhoneNumberSVC" customModule="NuiOS" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController useStoryboardIdentifierAsRestorationIdentifier="YES" id="NYk-fN-lKM" customClass="AccountRecPhoneNumberSVC" customModule="NuiOS" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tyF-GZ-xZl"/>
                         <viewControllerLayoutGuide type="bottom" id="AOg-P3-NbK"/>
@@ -812,6 +812,6 @@
         <image name="see-password-selected" width="34" height="34"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Lkp-S7-KdM"/>
+        <segue reference="fJW-Wl-Wwr"/>
     </inferredMetricsTieBreakers>
 </document>
