--- a/NuiOS/Base.lproj/Main.storyboard
+++ b/NuiOS/Base.lproj/Main.storyboard
@@ -20,16 +20,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="xiV-s1-UXk">
-                                <rect key="frame" x="21" y="298.5" width="349" height="90"/>
+                                <rect key="frame" x="21" y="298.5" width="333" height="90"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to NuiOS Project" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="48P-Hj-5qE">
-                                        <rect key="frame" x="32.5" y="0.0" width="284.5" height="30"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome to NuiOS Project" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="48P-Hj-5qE">
+                                        <rect key="frame" x="24.5" y="0.0" width="284.5" height="30"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="P7F-f6-813" customClass="NuButton" customModule="NuiOS" customModuleProvider="target">
-                                        <rect key="frame" x="127" y="50" width="95" height="40"/>
+                                        <rect key="frame" x="119" y="50" width="95" height="40"/>
                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="iGJ-72-f5O"/>
@@ -52,7 +52,7 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="xiV-s1-UXk" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="MMZ-zV-Biq"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="xiV-s1-UXk" secondAttribute="trailing" constant="5" id="RBB-rL-QXJ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="xiV-s1-UXk" secondAttribute="trailing" constant="5" id="RBB-rL-QXJ"/>
                             <constraint firstItem="xiV-s1-UXk" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="5" id="XAA-a5-dgs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -70,7 +70,7 @@
                 <viewControllerPlaceholder storyboardName="Profile" id="4pc-Zs-Fmk" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jem-H9-lPO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="716" y="32"/>
+            <point key="canvasLocation" x="584" y="103"/>
         </scene>
     </scenes>
 </document>
