--- a/NuiOS/Base.lproj/Profile.storyboard
+++ b/NuiOS/Base.lproj/Profile.storyboard
@@ -99,6 +99,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="E0H-Cv-P1E" kind="presentation" id="QLu-c9-lTh"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="phoneNumberCell" textLabel="9Qn-4h-R7o" rowHeight="70" style="IBUITableViewCellStyleDefault" id="hCL-yn-sfI">
                                         <rect key="frame" x="0.0" y="340" width="375" height="70"/>
@@ -116,6 +119,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="8A8-SE-THH" kind="presentation" id="qwl-jm-zxY"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="phoneNumberCell" textLabel="1IU-u9-V0Z" rowHeight="70" style="IBUITableViewCellStyleDefault" id="CJl-CG-lqX">
                                         <rect key="frame" x="0.0" y="410" width="375" height="70"/>
@@ -124,7 +130,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="341" height="69.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Atualizar Senha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1IU-u9-V0Z">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Update password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="1IU-u9-V0Z">
                                                     <rect key="frame" x="15" y="0.0" width="325" height="69.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -176,6 +182,22 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wKZ-g1-Xa8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="63" y="164"/>
+        </scene>
+        <!--EmailUpdate-->
+        <scene sceneID="w0y-Ef-6dn">
+            <objects>
+                <viewControllerPlaceholder storyboardName="EmailUpdate" id="E0H-Cv-P1E" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Vd-gd-3eS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="705" y="163"/>
+        </scene>
+        <!--PhoneNumberUpdate-->
+        <scene sceneID="vP4-lT-Cnp">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PhoneNumberUpdate" id="8A8-SE-THH" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="QBZ-9O-W6j" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="750" y="219"/>
         </scene>
     </scenes>
 </document>
